--- a/index.html
+++ b/index.html
@@ -236,6 +236,15 @@
         <button type="submit">Send Message</button>
     </form>
 </section>
+    <footer class="footer">
+    <p> by K. Hanish Vardhan</p>
+    <div class="footer-links">
+        <a >Email</a> kottehanish@gmail.com
+        <a href="https://github.com/Hanish01" target="_blank">GitHub</a> |
+        <a href="www.linkedin.com/in/hanish-kotte" target="_blank">LinkedIn</a>
+    </div>
+</footer>
+
 
 </body>
 </html>
